--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,187 @@
 ---
 abstract: 'Tapper - Wrapper for Benchmark::Perl::Formance'
 author:
-  - 'AMD OSRC Tapper Team, C<< <tapper at amd64.org> >>'
   - 'AMD OSRC Tapper Team <tapper@amd64.org>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
   Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 1.00'
-license: freebsd
+  ExtUtils::MakeMaker: 6.30
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.300016, CPAN::Meta::Converter version 2.120921'
+license: open_source
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Tapper-TestSuite-Benchmark-Perl-Formance
-no_index:
-  directory:
-    - inc
-    - t
-    - xt
 requires:
-  Benchmark::Perl::Formance: 0.22
-version: 3.000005
+  Benchmark::Perl::Formance: 0
+  Config: 0
+  Getopt::Long: 0
+  IO::Socket::INET: 0
+  strict: 0
+  warnings: 0
+resources:
+  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Tapper-TestSuite-Benchmark-Perl-Formance
+  homepage: http://metacpan.org/release/Tapper-TestSuite-Benchmark-Perl-Formance
+  repository: git://github.com/amd/Tapper-TestSuite-Benchmark-Perl-Formance.git
+version: 4.0.1
+x_Dist_Zilla:
+  plugins:
+    -
+      class: Dist::Zilla::Plugin::GatherDir
+      name: '@AMD/GatherDir'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::PruneCruft
+      name: '@AMD/PruneCruft'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::ManifestSkip
+      name: '@AMD/ManifestSkip'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::MetaYAML
+      name: '@AMD/MetaYAML'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::Readme
+      name: '@AMD/Readme'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::ExtraTests
+      name: '@AMD/ExtraTests'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::ExecDir
+      name: '@AMD/ExecDir'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::ShareDir
+      name: '@AMD/ShareDir'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::MakeMaker
+      name: '@AMD/MakeMaker'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::Manifest
+      name: '@AMD/Manifest'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::TestRelease
+      name: '@AMD/TestRelease'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::ConfirmRelease
+      name: '@AMD/ConfirmRelease'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::UploadToCPAN
+      name: '@AMD/UploadToCPAN'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::MetaConfig
+      name: '@AMD/MetaConfig'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::MetaJSON
+      name: '@AMD/MetaJSON'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::PkgVersion
+      name: '@AMD/PkgVersion'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::PodSyntaxTests
+      name: '@AMD/PodSyntaxTests'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::NoTabsTests
+      name: '@AMD/NoTabsTests'
+      version: 0.01
+    -
+      class: Dist::Zilla::Plugin::PodCoverageTests
+      name: '@AMD/PodCoverageTests'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::MetaResources
+      name: '@AMD/MetaResources'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::Authority
+      name: '@AMD/Authority'
+      version: 1.006
+    -
+      class: Dist::Zilla::Plugin::EOLTests
+      name: '@AMD/EOLTests'
+      version: 0.02
+    -
+      class: Dist::Zilla::Plugin::PodWeaver
+      name: '@AMD/PodWeaver'
+      version: 3.101641
+    -
+      class: Dist::Zilla::Plugin::AutoPrereqs
+      name: '@AMD/AutoPrereqs'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::CheckChangesHasContent
+      name: '@AMD/CheckChangesHasContent'
+      version: 0.005
+    -
+      class: Dist::Zilla::Plugin::NextRelease
+      name: '@AMD/NextRelease'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch
+      name: '@AMD/Git::CheckFor::CorrectBranch'
+      version: 0.004
+    -
+      class: Dist::Zilla::Plugin::Git::NextVersion
+      name: '@AMD/Git::NextVersion'
+      version: 1.121010
+    -
+      class: Dist::Zilla::Plugin::Git::Check
+      name: '@AMD/@Git/Check'
+      version: 1.121010
+    -
+      class: Dist::Zilla::Plugin::Git::Commit
+      name: '@AMD/@Git/Commit'
+      version: 1.121010
+    -
+      class: Dist::Zilla::Plugin::Git::Tag
+      name: '@AMD/@Git/Tag'
+      version: 1.121010
+    -
+      class: Dist::Zilla::Plugin::Git::Push
+      name: '@AMD/@Git/Push'
+      version: 1.121010
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':InstallModules'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':IncModules'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':TestFiles'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ExecFiles'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ShareFiles'
+      version: 4.300016
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':MainModule'
+      version: 4.300016
+  zilla:
+    class: Dist::Zilla::Dist::Builder
+    config:
+      is_trial: 0
+    version: 4.300016
+x_authority: cpan:AMD
